[workspace]
members = [
	".",
	"*/src/..",
	"examples/*"
]
resolver = "2"

[patch.crates-io]
asteracea = { path = "." }

[package]
name = "asteracea"
version = "0.0.2"
rust-version = "1.58"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2021"
description = "A web application framework for Rust. Asteracea can be used for client-side and server-side rendering and for statically rendered and deployed sites (and combinations thereof) without specific changes to an app's code."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/Asteracea"
homepage = "https://github.com/Tamschi/Asteracea/tree/v0.0.2"
documentation = "https://docs.rs/asteracea/0.0.2"
keywords = ["framework", "server-side", "client-side", "static-site"]
categories = ["web-programming", "gui", "wasm", "no-std"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/Asteracea" }
is-it-maintained-open-issues = { repository = "Tamschi/Asteracea" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
error-abort = [] # Reserved. Will be used to abort the process on GUI error escalation.
force-unwind = [] # Force the use of panics for `Escalation` propagation. This may improve code size and app performance.

[dependencies]
asteracea_proc-macro-definitions = { path = "./proc-macro-definitions", version = "0.0.2" } # public
bumpalo = { version = "3.6.1", features = ["collections"] } # public
try-lazy-init = "0.0.2"
lignin = "0.1.0" # public
lignin-schema = { git = "https://github.com/Tamschi/lignin-schema.git", branch = "develop" } # semi-public
linotype = { version = "0.0.1" }
rhizome = { git = "https://github.com/Tamschi/rhizome.git", branch = "develop" } # semi-public
static_assertions = "1.1.0"
typed-builder = "0.10.0" # semi-public
tracing = { version = "0.1.29", optional = true, default-features = false }
futures-core = "0.3.19"
tiptoe = { version = "0.0.2", features = ["sync"] }

[dev-dependencies]
cargo-husky = "1.5.0"
debugless-unwrap = "0.0.4"
ergo-pin = "0.1.0"
git_info = "0.1.2"
lignin-html = { git = "https://github.com/Tamschi/lignin-html.git", branch = "develop" }
tap = "1.0.1"
this-is-fine = "0.0.1"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.27"
