[package]
name = "asteracea_proc-macro-definitions"
version = "0.0.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
call2-for-syn = "1.0.0"
heck = "0.3.1"
lazy_static = "1.4.0"
quote = "1.0.2"
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0.7"
rand = { version = "0.7.3", optional = true }
take_mut = "0.2.2"
unzip-n = "0.1.1"

[dependencies.syn]
version = "1.0.13"
default-features = false
features = ["derive", "full", "parsing", "printing", "visit-mut"]

[features]
# Enables dependency extraction with component!.
rhizome = []
# Enables style scoping with component!.
styles = ["rand"]