[package]
name = "asteracea_proc-macro-definitions"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
description = "Proc macro definitions for Asteracea. They are unlikely to work correctly unless used through the asteracea crate."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/Asteracea"
homepage = "https://github.com/Tamschi/Asteracea/tree/v0.0.2"
documentation = "https://docs.rs/asteracea/0.0.2"
keywords = []
categories = []
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[lib]
proc-macro = true

[features]
backtrace = [] # Enables additional error traces, at the cost of code size and performance.

[dependencies]
call2-for-syn = "2.0.3"
debugless-unwrap = "0.0.4"
heck = "0.3.1"
lazy_static = "1.4.0"
quote = "1.0.2"
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.7"
syn-mid = { version = "0.5.0", features = ["clone-impls"] }
take_mut = "0.2.2"
unzip-n = "0.1.1"
unquote = { git = "https://github.com/Tamschi/unquote.git", branch = "develop" }
merging-iterator = "1.3.0"
easy-ext = "0.2.3"
either = "1.6.1"
tap = "1.0.1"

[dependencies.syn]
version = "1.0.13"
default-features = false
features = ["derive", "full", "parsing", "printing", "visit-mut"]
