[package]
name = "tracing-sample"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asteracea = { path = "../..", features = ["tracing"] }
ergo-pin = "0.1.0"
lignin-html = { git = "https://github.com/Tamschi/lignin-html.git", branch = "develop" }
rhizome = "0.0.1"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.5"
